# Typst-mcpserver

./: .gitignore  Dockerfile  README.md  agent.py  ai_benefits_poster.typ  client.py  mcp_config_snippet.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: docker-image.yml  docker-publish.yml
guides/: mcp_usage_guide.md
templates/: cv.typ  data_report.typ  paper.typ  poster.typ  presentation.typ  report.typ  resume.typ
